Update: Contact responsive

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     </nav>
 
     <div class="flex flex-col justify-center items-center">
-        <img class="object-cover max-w-80 max-h-80" src="./assets/logo.png" alt="Logo">
+        <img class="object-cover max-w-60 max-h-60" src="./assets/logo.png" alt="Logo">
         <div class="mt-5">
             <ul class="flex flex-col items-center">
                 <li>
@@ -75,17 +75,17 @@
 
     </div>
 
-    <div class="flex flex-row justify-around items-center py-10 px-10">
+    <div class="flex flex-col lg:flex-row justify-around items-center py-10 px-4 lg:px-10">
         <iframe class="flex-1"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3472.6474726390525!2d81.03834501440905!3d29.497481051158882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39a3e902eeb7df3d%3A0x2d263014c49f02b1!2sHILLTOP%20ACADEMY!5e0!3m2!1sen!2snp!4v1631942416605!5m2!1sen!2snp"
             width="97%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe>
 
-        <div class="flex flex-1 justify-center">
-            <div class="mx-5 w-3/4">
+        <div class="flex flex-1 justify-center pt-5 lg:pt-0">
+            <div class="mx-5 lg:w-3/4">
                 <span class="text-lg font-semibold text-gray-700">Fill the form for inquary about Hilltop
                     Academy.</span>
-                <form class="mt-8 space-y-6" action="#" method="POST">
+                <form class="mt-3 lg:mt-8 space-y-6" action="#" method="POST">
                     <div class="flex space-x-4">
                         <div class="w-1/2">
                             <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
@@ -132,20 +132,20 @@
                 Please don't hesitate to get in touch with us via phone, email, or the contact form on our website.
                 we're here to help with any questions or concerns you may have.</p>
         </div>
-        <div class="flex mt-8">
-            <div class="flex flex-col items-center px-5">
+        <div class="flex flex-col lg:flex-row mt-8">
+            <div class="flex flex-col items-center px-5 pb-5 lg:pb-0">
                 <a href=""
                     class="text-logo_blue text-3xl bg-blue-100 w-16 h-16 rounded-full flex justify-center items-center"><i
                         class="fa-solid fa-location-dot"></i></a>
                 <span class="mt-3">Durgathali-2, Bajhang, Nepal</span>
             </div>
-            <div class="flex flex-col items-center px-5">
+            <div class="flex flex-col items-center px-5 pb-5 lg:pb-0">
                 <a href=""
                     class="text-logo_blue text-3xl bg-blue-100 w-16 h-16 rounded-full flex justify-center items-center"><i
                         class="fa-solid fa-envelope"></i></a>
                 <span class="mt-3">hilltop-academy@outlook.com</span>
             </div>
-            <div class="flex flex-col items-center px-5">
+            <div class="flex flex-col items-center px-5 pb-5 lg:pb-0">
                 <a href=""
                     class="text-logo_blue text-3xl bg-blue-100 w-16 h-16 rounded-full flex justify-center items-center"><i
                         class="fa-solid fa-phone-volume"></i></a>
@@ -190,5 +190,6 @@
         </nav>
     </footer>
 </body>
+<script src="script.js"></script>
 
 </html>
