Update: about page

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="p-3 px-16 flex bg-white justify-between items-center">
+    <nav class="p-3 px-3 lg:px-16 flex bg-white justify-between items-center">
         <a href="#" id="brand" class="flex gap-2 items-center">
             <img class="object-cover max-w-32 max-h-32" src="./assets/logo.png" alt="Logo">
             <span class="text-lg font-medium font-display">Hilltop Academy</span>
@@ -57,10 +57,30 @@
         </div>
     </nav>
 
-    <div>
-        about us section
+    <!-- about us -->
+    <div class="mt-5">
+        <article id="about" class="flex flex-col lg:flex-row">
+            <img src="./assets/school-img.jpg" alt="">
+            <div id="about_details" class="px-8">
+                <h3>About Hilltop Academy</h3>
+                <p>It’s a matter of great pleasure to welcome you all at Hilltop Academy, one of the reputed and leading
+                    School in Bajhang, Nepal. Our motto is quality education in the field of technology through research
+                    and innovation creating the national integrity. The school is located at jujee-2, Bjhang, sorrounded
+                    by greenery. We always welcome the new and creative ideas of students and plan and work to create
+                    practical.The school is run by a group of enthusiastic young experienced academicians who are
+                    involved in administration, classroom teaching, research activities in different engineering fields
+                    and above all in the total management of the School. We have been providing quality education to the
+                    students and producing academically sound high skilled human resources for the society and for the
+                    nation with high human values and professional integrity. At Hilltop Academy, we understand
+                    education as transfer of knowledge through research, innovation and availability of the working
+                    opportunities to the prospective Education. Our team is dedicated to create excellent
+                    teaching-learning environment with extensive counseling, interactions and project works.
+                    <br><br>
+                    Hilltop Academy, Knowledge is the Power.
+                </p>
+            </div>
+        </article>
     </div>
-
 
     <!-- footer -->
     <footer class="font-display px-10 py-4 bg-footer_bg flex items-center flex-col lg:flex-row justify-around">
