Update: about page

--- a/about.html
+++ b/about.html
@@ -58,11 +58,11 @@
     </nav>
 
     <!-- about us -->
-    <div class="mt-5">
-        <article id="about" class="flex flex-col lg:flex-row">
-            <img src="./assets/school-img.jpg" alt="">
-            <div id="about_details" class="px-8">
-                <h3>About Hilltop Academy</h3>
+    <div class="mt-5 mb-10 px-12">
+        <article id="about" class="flex">
+            <img class="max-h-fit max-w-fit w-1/2 photos" src="./assets/school-img.jpg" alt="Sample Image">
+            <div class="w-1/2 px-10 text-justify">
+                <h2 class="font-Title font-bold text-xl">About Hilltop Academy</h2>
                 <p>It’s a matter of great pleasure to welcome you all at Hilltop Academy, one of the reputed and leading
                     School in Bajhang, Nepal. Our motto is quality education in the field of technology through research
                     and innovation creating the national integrity. The school is located at jujee-2, Bjhang, sorrounded
@@ -76,7 +76,7 @@
                     opportunities to the prospective Education. Our team is dedicated to create excellent
                     teaching-learning environment with extensive counseling, interactions and project works.
                     <br><br>
-                    Hilltop Academy, Knowledge is the Power.
+                    <h2 class="font-Title font-display text-pretty text-lg">Hilltop Academy, Knowledge is the Power.</h2>
                 </p>
             </div>
         </article>
