--- a/home.html
+++ b/home.html
@@ -133,6 +133,53 @@
     </div>
     <!-- crouser -->
 
+    <!-- services -->
+    <div class="mt-5 px-16 flex flex-col justify-center items-center">
+        <span class="text-lg lg:text-3xl font-semibold">Our Facililites And Focus</span>
+        <div class="grid grid-cols-3 grid-rows-2 gap-3 w-3/4 mt-5">
+            <div class="col-span-2 bg-red-500 relative group">
+                <div class="overflow-hidden">
+                    <img src="./assets/cat-1.jpg" class="transform group-hover:scale-105 transition duration-300" alt="">
+                </div>
+                <div class="absolute inset-0 flex flex-col justify-end transition duration-300">
+                    <span class="text-gray-200 bg-gray-400 bg-opacity-65 text-base pl-2 pb-0">
+                        New Technology Oriented Learning
+                    </span>
+                </div>
+            </div>
+            <div class="row-span-2 bg-green-600 relative group">
+                <div class="overflow-hidden">
+                    <img src="./assets/cat-4.jpg" class="transform group-hover:scale-105 transition duration-300" alt="">
+                </div>
+                <div class="absolute inset-0 flex flex-col justify-end transition duration-300">
+                    <span class="text-gray-200 bg-gray-400 bg-opacity-65 text-base pl-2 pb-0">
+                        Extra Curriculum Activities
+                    </span>
+                </div>
+            </div>
+            <div class="bg-blue-600 relative group">
+                <div class="overflow-hidden">
+                    <img src="./assets/cat-2.jpg" class="transform group-hover:scale-105 transition duration-300" alt="">
+                </div>
+                <div class="absolute inset-0 flex flex-col justify-end transition duration-300">
+                    <span class="text-gray-200 bg-gray-400 bg-opacity-65 text-base pl-2 pb-0">
+                        Social & Motivational Activities
+                    </span>
+                </div>
+            </div>
+            <div class=" bg-yellow-400 relative group">
+                <div class="overflow-hidden">
+                    <img src="./assets/cat-3.jpg" class="transform group-hover:scale-105 transition duration-300" alt="">
+                </div>
+                <div class="absolute inset-0 flex flex-col justify-end transition duration-300">
+                    <span class="text-gray-200 bg-gray-400 bg-opacity-65 text-base pl-2 pb-0">
+                        Group Work
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- view section -->
     <div class="my-8  flex flex-col">
         <div class="flex flex-col items-center">
@@ -142,7 +189,7 @@
         <div class="mt-2 flex flex-col lg:flex-row items-center justify-center">
             <div
                 class="mx-5 p-5 bg-slate-50 flex flex-col items-center w-60 text-justify hover:shadow-xl transition-all duration-300 border-0 rounded-lg">
-                <img src="assets/profile.webp" class="border-0 rounded-md" alt="">
+                <img src="assets/profile.jpg" class="border-0 rounded-md" alt="">
                 <h2 class="text-lg font-medium text-blueish_dark">Nathan Macken</h2>
                 <span>Sr. web designer</span>
                 <p class="mt-3 text-slate-500 text-sm">If you are looking at blank cassettes on the web, you may be very
@@ -156,7 +203,7 @@
             </div>
             <div class="mx-5 p-5 bg-slate-50 flex flex-col items-center w-60 text-justify hover:shadow-xl
                 transition-all duration-300 border-0 rounded-lg">
-                <img src="assets/profile.webp" class="border-0 rounded-md" alt="">
+                <img src="assets/profile.jpg" class="border-0 rounded-md" alt="">
                 <h2 class="text-lg font-medium text-blueish_dark">Nathan Macken</h2>
                 <span>Sr. web designer</span>
                 <p class="mt-3 text-slate-500 text-sm">If you are looking at blank cassettes on the web, you may be very
@@ -170,7 +217,7 @@
             </div>
             <div class="mx-5 p-5 bg-slate-50 flex flex-col items-center w-60 text-justify hover:shadow-xl
                 transition-all duration-300 border-0 rounded-lg">
-                <img src="assets/profile.webp" class="border-0 rounded-md" alt="">
+                <img src="assets/profile.jpg" class="border-0 rounded-md" alt="">
                 <h2 class="text-lg font-medium text-blueish_dark">Nathan Macken</h2>
                 <span>Sr. web designer</span>
                 <p class="mt-3 text-slate-500 text-sm">If you are looking at blank cassettes on the web, you may be very
@@ -184,7 +231,7 @@
             </div>
             <div class="mx-5 p-5 bg-slate-50 flex flex-col items-center w-60 text-justify hover:shadow-xl
                 transition-all duration-300 border-0 rounded-lg">
-                <img src="assets/profile.webp" class="border-0 rounded-md" alt="">
+                <img src="assets/profile.jpg" class="border-0 rounded-md" alt="">
                 <h2 class="text-lg font-medium text-blueish_dark">Nathan Macken</h2>
                 <span>Sr. web designer</span>
                 <p class="mt-3 text-slate-500 text-sm">If you are looking at blank cassettes on the web, you may be
