Update: resolve bug in about page

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                     opportunities to the prospective Education. Our team is dedicated to create excellent
                     teaching-learning environment with extensive counseling, interactions and project works.
                     <br><br>
-                    <h2 class="font-Title font-display text-pretty text-lg">Hilltop Academy, Knowledge is the Power.</h2>
+                    <h2 class="font-Title text-pretty text-lg">Hilltop Academy, Knowledge is the Power.</h2>
                 </p>
             </div>
         </article>
