update: about and blog

--- a/about.html
+++ b/about.html
@@ -60,7 +60,9 @@
     <!-- about us -->
     <div class="mt-5 mb-10 px-12">
         <article id="about" class="flex">
-            <img class="max-h-fit max-w-fit w-1/2 photos" src="./assets/school-img.jpg" alt="Sample Image">
+            <div class="max-w-fit w-1/2 "> 
+                <img class="  photos" src="./assets/school-img.jpg" alt="Sample Image">
+            </div>
             <div class="w-1/2 px-10 text-justify">
                 <h2 class="font-Title font-bold text-xl">About Hilltop Academy</h2>
                 <p>It’s a matter of great pleasure to welcome you all at Hilltop Academy, one of the reputed and leading
