--- a/home.html
+++ b/home.html
@@ -90,6 +90,43 @@
             </span>
         </div>
     </div>
+
+    <!-- video section -->
+    <section class="px-36 mt-5">
+        <div class="relative h-[70vh] bg-center flex items-center" style="background-image: url(./assets/school-img.jpg)">
+            <div class="absolute z-0 inset-0 bg-gray-800 opacity-80"></div>
+            <div class="z-10 text-white ml-14 mr-8ml-8 p-8 w-1/2">
+                <span class="text-sm">Our Presentaion is for you</span>
+                <br class="hidden lg:inline-block">
+                <h1 class="title-font sm:text-3xl text-2xl mb-4 font-medium text-white">Watch this video to learn more
+                    <br class="hidden lg:inline-block">
+                    <span class="text-green-600">about Hilltop Academy.</span>
+                </h1>
+                <p class="text-justify text-sm"> As your Principal, it is important to me that everyone who steps through
+                     our doors: students, parents, and teachers are excited to be here! This attitude enables us to meet the
+                      challenges of academic excellence in a positive, fun, and nurturing way.
+                </p>
+                <br class="hidden lg:inline-block">
+                <p class="text-justify text-sm">This way, you can control the stacking order of your elements precisely
+                     as per your design requirements using Tailwind CSS.
+                </p>
+                <button
+                    class="mt-5 lg:flex gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 hover:bg-green-600 hover:text-white transition-all duration-500">
+                    <span class="">View more in Gallary</span>
+                </button>
+            </div>
+            <div class="z-10 mr-14 ml-8 w-1/2">
+                <video class="" autoplay muted loop src="./assets/drone.MP4" alt="Sample Image"></video>
+                <div class="bg-gray-100 h-10 text-lg font-medium flex justify-center items-center">
+                    <span>
+                        <i class="fa-regular fa-circle-play text-xl"></i>
+                        Hilltop Academy Drone View
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Principal message -->
     <div class="lg:mx-32 flex flex-col mt-10">
         <span class="pl-16 text-3xl font-semibold">Principal's Message</span>
