Reponseness: about,contact,home

--- a/about.html
+++ b/about.html
@@ -58,12 +58,12 @@
     </nav>
 
     <!-- about us -->
-    <div class="mt-5 mb-10 px-12">
-        <article id="about" class="flex">
-            <div class="max-w-fit w-1/2 "> 
+    <section class="mt-5 mb-10 px-3 lg:px-12">
+        <article id="about" class="flex flex-col lg:flex-row">
+            <div class="max-w-fit lg:w-1/2 "> 
                 <img class="  photos" src="./assets/school-img.jpg" alt="Sample Image">
             </div>
-            <div class="w-1/2 px-10 text-justify">
+            <div class="lg:w-1/2 px-3 lg:px-10 text-justify">
                 <h2 class="font-Title font-bold text-xl">About Hilltop Academy</h2>
                 <p>It’s a matter of great pleasure to welcome you all at Hilltop Academy, one of the reputed and leading
                     School in Bajhang, Nepal. Our motto is quality education in the field of technology through research
@@ -82,7 +82,84 @@
                 </p>
             </div>
         </article>
-    </div>
+    </section>
+
+    <!-- teaching staffs -->
+    <section class="lg:mx-36">
+        <div class="my-8  flex flex-col">
+            <div class="flex flex-col items-center">
+                <h1 class="text-3xl font-semibold">Our Teaching Staffs</h1>
+                <span class="text-sm font-medium italic text-slate-500">Something to write here</span>
+            </div>
+            <div class="mt-2 flex flex-col lg:flex-row items-center justify-center">
+                <div class="mx-5 p-2 bg-slate-50 flex flex-col items-center w-40 text-justify hover:shadow-xl transition-all duration-300 border rounded-lg">
+                    <div class="border-0 rounded-md overflow-hidden">
+                        <img src="assets/profile.jpg" height="150px" width="150px" class="hover:scale-105 transform duration-200" alt="">
+                    </div>
+                    <h2 class="text-lg font-medium text-blueish_dark">Janak Dhami</h2>
+                    <span>Principal</span>
+                </div>
+            </div>
+            <div class="mt-2 flex flex-col flex-wrap lg:flex-row items-center justify-center">
+                <div class="mx-5 my-2 p-2 bg-slate-50 flex flex-col items-center w-40 text-justify hover:shadow-xl transition-all duration-300 border rounded-lg">
+                    <div class="border-0 rounded-md overflow-hidden">
+                        <img src="assets/profile.jpg" height="150px" width="150px" class="hover:scale-105 transform duration-200" alt="">
+                    </div>
+                    <h2 class="text-lg font-medium text-blueish_dark">Janak Dhami</h2>
+                    <span>Principal</span>
+                </div>
+                <div class="mx-5 my-2 p-2 bg-slate-50 flex flex-col items-center w-40 text-justify hover:shadow-xl transition-all duration-300 border rounded-lg">
+                    <div class="border-0 rounded-md overflow-hidden">
+                        <img src="assets/profile.jpg" height="150px" width="150px" class="hover:scale-105 transform duration-200" alt="">
+                    </div>
+                    <h2 class="text-lg font-medium text-blueish_dark">Janak Dhami</h2>
+                    <span>Principal</span>
+                </div>
+                <div class="mx-5 my-2 p-2 bg-slate-50 flex flex-col items-center w-40 text-justify hover:shadow-xl transition-all duration-300 border rounded-lg">
+                    <div class="border-0 rounded-md overflow-hidden">
+                        <img src="assets/profile.jpg" height="150px" width="150px" class="hover:scale-105 transform duration-200" alt="">
+                    </div>
+                    <h2 class="text-lg font-medium text-blueish_dark">Janak Dhami</h2>
+                    <span>Principal</span>
+                </div>
+                <div class="mx-5 my-2 p-2 bg-slate-50 flex flex-col items-center w-40 text-justify hover:shadow-xl transition-all duration-300 border rounded-lg">
+                    <div class="border-0 rounded-md overflow-hidden">
+                        <img src="assets/profile.jpg" height="150px" width="150px" class="hover:scale-105 transform duration-200" alt="">
+                    </div>
+                    <h2 class="text-lg font-medium text-blueish_dark">Janak Dhami</h2>
+                    <span>Principal</span>
+                </div>
+                <div class="mx-5 my-2 p-2 bg-slate-50 flex flex-col items-center w-40 text-justify hover:shadow-xl transition-all duration-300 border rounded-lg">
+                    <div class="border-0 rounded-md overflow-hidden">
+                        <img src="assets/profile.jpg" height="150px" width="150px" class="hover:scale-105 transform duration-200" alt="">
+                    </div>
+                    <h2 class="text-lg font-medium text-blueish_dark">Janak Dhami</h2>
+                    <span>Principal</span>
+                </div>
+                <div class="mx-5 my-2 p-2 bg-slate-50 flex flex-col items-center w-40 text-justify hover:shadow-xl transition-all duration-300 border rounded-lg">
+                    <div class="border-0 rounded-md overflow-hidden">
+                        <img src="assets/profile.jpg" height="150px" width="150px" class="hover:scale-105 transform duration-200" alt="">
+                    </div>
+                    <h2 class="text-lg font-medium text-blueish_dark">Janak Dhami</h2>
+                    <span>Principal</span>
+                </div>
+                <div class="mx-5 my-2 p-2 bg-slate-50 flex flex-col items-center w-40 text-justify hover:shadow-xl transition-all duration-300 border rounded-lg">
+                    <div class="border-0 rounded-md overflow-hidden">
+                        <img src="assets/profile.jpg" height="150px" width="150px" class="hover:scale-105 transform duration-200" alt="">
+                    </div>
+                    <h2 class="text-lg font-medium text-blueish_dark">Janak Dhami</h2>
+                    <span>Principal</span>
+                </div>
+                <div class="mx-5 my-2 p-2 bg-slate-50 flex flex-col items-center w-40 text-justify hover:shadow-xl transition-all duration-300 border rounded-lg">
+                    <div class="border-0 rounded-md overflow-hidden">
+                        <img src="assets/profile.jpg" height="150px" width="150px" class="hover:scale-105 transform duration-200" alt="">
+                    </div>
+                    <h2 class="text-lg font-medium text-blueish_dark">Janak Dhami</h2>
+                    <span>Principal</span>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- footer -->
     <footer class="font-display px-10 py-4 bg-footer_bg flex items-center flex-col lg:flex-row justify-around">
