--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,10 @@
 
     <div class="flex flex-col justify-center items-center">
         <img class="object-cover max-w-60 max-h-60" src="./assets/logo.png" alt="Logo">
-        <div class="mt-5">
+        <!-- <video class="max-w-96 max-h-96" autoplay muted src="./assets/videos/LogoAnimation_1.mp4"></video> -->
+        <!-- <video width="600px" height="600px" autoplay muted src="./assets/videos/LogoAnimation.mp4"></video> -->
+
+        <div class="">
             <ul class="flex flex-col items-center">
                 <li>
                     <h1 class="text-4xl font-semibold font-display">Hilltop Academy</h1>
