Added: blog in home

--- a/home.html
+++ b/home.html
@@ -221,6 +221,48 @@
         </div>
     </div>
 
+    <!-- blog section -->
+    <div class="mt-10 mx-auto max-w-[1170px] px-4 sm:px-8 xl:px-0 relative z-1" bis_skin_checked="1">
+        <div class="flex flex-wrap gap-x-7.5 gap-y-9" bis_skin_checked="1">
+            <div class="max-w-[1170px] w-full flex flex-col lg:flex-row lg:items-center gap-7.5 lg:gap-11 bg-white shadow-1 rounded-xl p-4 lg:p-2.5" bis_skin_checked="1">
+                <div class="lg:max-w-[536px] w-full" bis_skin_checked="1">
+                    <a href="blog-single.html">
+                        <img class="w-full" src="./assets/hero-01.png" alt="hero">
+                    </a>
+                </div>
+                <div class="lg:max-w-[540px] w-full" bis_skin_checked="1">
+                    <a href="category.html" class="inline-flex text bg-gray-100 font-medium text-sm py-1 px-3 rounded-full mb-4">Lifestyle</a>
+                    <h1 class="font-bold text-3xl text-gray-900 xl:text-heading-4 text-dark mb-4">
+                        <a href="blog-single.html">
+                            Begin here to obtain a brief summary encompassing all the
+                            essential
+                        </a>
+                    </h1>
+                    <p class="max-w-[524px]">
+                        This comprehensive post serves as your cheat-sheet to swiftly
+                        familiarize yourself with Ghost. Packed with crucial...
+                    </p>
+                    <div class="flex flex-col gap-2.5 mt-5" bis_skin_checked="1">
+                        <div href="" class="flex items-center gap-3">
+                            <div class="flex w-6 h-6 rounded-full overflow-hidden" bis_skin_checked="1">
+                                <img src="./assets/profile.jpg" alt="user">
+                            </div>
+                            <p class="text-sm">Adrio Devid</p>
+                            <p class="text-sm"><i class="fa-regular fa-clock"></i> Sep 10, 2025</p>
+                        </div>
+                        <div>
+                            <button
+                                class="mt-5 flex gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 bg-green-600 text-white transition-all duration-500">
+                                <span class="">View in Blog</span>
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- view section -->
     <div class="my-8  flex flex-col">
         <div class="flex flex-col items-center">
