ADDED:Links in home

--- a/home.html
+++ b/home.html
@@ -17,17 +17,19 @@
             <span class="text-lg font-medium font-display">Hilltop Academy</span>
         </a>
         <div id="nav-menu" class="hidden lg:flex gap-12">
-            <a href="#" class="font-semibold text-base hover:text-primary">Home</a>
-            <a href="#" class="font-semibold text-base hover:text-primary">Gallery</a>
-            <a href="#" class="font-semibold text-base hover:text-primary">Cources</a>
-            <a href="#" class="font-semibold text-base hover:text-primary">Contacts</a>
-            <a href="#" class="font-semibold text-base hover:text-primary">About</a>
+            <a href="home.html" class="font-semibold text-base hover:text-primary">Home</a>
+            <a href="gallary.html" class="font-semibold text-base hover:text-primary">Gallery</a>
+            <a href="blog.html" class="font-semibold text-base hover:text-primary">Blog</a>
+            <a href="contact.html" class="font-semibold text-base hover:text-primary">Contacts</a>
+            <a href="about.html" class="font-semibold text-base hover:text-primary">About</a>
         </div>
-        <button
-            class="hidden lg:flex gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600">
-            <span>Apply Online!!</span>
-            <i class="fa-solid fa-arrow-right"></i>
-        </button>
+        <a href="form.html">
+            <button
+                class="hidden lg:flex gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600">
+                <span>Apply Online!!</span>
+                <i class="fa-solid fa-arrow-right"></i>
+            </button>
+        </a>
         <button class="p-2 lg:hidden" onclick="handleMenu()">
             <i class="fa-solid fa-bars text-gray-600"></i>
         </button>
@@ -42,17 +44,19 @@
                 </button>
             </div>
             <div>
-                <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Home</a>
-                <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Gallery</a>
-                <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Cources</a>
-                <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Contacts</a>
-                <a href="#" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">About</a>
+                <a href="home.html" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Home</a>
+                <a href="gallary.html" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Gallery</a>
+                <a href="blog.html" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Blog</a>
+                <a href="contact.html" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">Contacts</a>
+                <a href="about.html" class="font-medium m-3 p-3 hover:bg-gray-50 block rounded-lg">About</a>
             </div>
             <div class="h-[1px] bg-gray-300">
-                <button class="mt-6 w-full flex gap-2 items-center px-6 py-2 rounded-lg hover:bg-gray-50">
-                    <span>Apply Online!!</span>
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
+                <a href="form.html">
+                    <button class="mt-6 w-full flex gap-2 items-center px-6 py-2 rounded-lg hover:bg-gray-50">
+                        <span>Apply Online!!</span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </a>
             </div>
         </div>
     </nav>
@@ -69,11 +73,13 @@
                 <p class="mt-2 text-gray-600">"Education is the most powerful weapon which you can use to change the
                     world."
                 </p>
-                <button
-                    class="mt-5 lg:flex gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 hover:bg-green-600 hover:text-white transition-all duration-500">
-                    <span class="">Apply Now!!</span>
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
+                <a href="form.html">
+                    <button
+                        class="mt-5 lg:flex gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 hover:bg-green-600 hover:text-white transition-all duration-500">
+                        <span class="">Apply Now!!</span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </a>
             </div>
         </div>
     </div>
@@ -122,11 +128,13 @@
                         Hilltop Academy Drone View
                     </span>
                 </div>
-                <button
-                    class="mt-5 flex lg:hidden gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 bg-green-600 text-white transition-all duration-500">
-                    <span class="">View more in Gallary!!</span>
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
+                <a href="gallary.html">
+                    <button
+                        class="mt-5 flex lg:hidden gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 bg-green-600 text-white transition-all duration-500">
+                        <span class="">View more in Gallary!!</span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </a>
             </div>
         </div>
     </section>
@@ -250,13 +258,13 @@
                             <p class="text-sm">Adrio Devid</p>
                             <p class="text-sm"><i class="fa-regular fa-clock"></i> Sep 10, 2025</p>
                         </div>
-                        <div>
+                        <a href="blog.html">
                             <button
                                 class="mt-5 flex gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 bg-green-600 text-white transition-all duration-500">
                                 <span class="">View in Blog</span>
                                 <i class="fa-solid fa-arrow-right"></i>
                             </button>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
