Update: Mobile resposive for services section

--- a/home.html
+++ b/home.html
@@ -244,7 +244,7 @@
     <!-- services -->
     <div class="mt-10 mx-auto flex flex-col max-w-[1170px] justify-center items-center">
         <span class="text-lg lg:text-3xl font-semibold">Our Facililites And Focus</span>
-        <div class="grid grid-cols-3 grid-rows-2 gap-3 mt-5">
+        <div class="grid grid-cols-2 grid-rows-3 lg:grid-cols-3 lg:grid-rows-2 gap-3 mt-5">
             <div class="col-span-2 bg-red-500 relative group">
                 <div class="h-full w-full overflow-hidden">
                     <img src="./assets/cat-1.jpg"
@@ -252,7 +252,8 @@
                         alt="">
                 </div>
                 <div class="absolute inset-0 flex flex-col justify-end transition duration-300">
-                    <span class="bg-opacity-65 text-lg font-medium text-white bg-gray-300 pl-2 pb-0">
+                    <span
+                        class="bg-opacity-65 text-sm lg:text-lg font-normal lg:font-medium text-white bg-gray-300 pl-2 pb-0">
                         New Technology Oriented Learning
                     </span>
                 </div>
@@ -264,7 +265,8 @@
                         alt="">
                 </div>
                 <div class="absolute inset-0 flex flex-col justify-end transition duration-300">
-                    <span class="bg-opacity-65 text-lg font-medium text-white bg-gray-300 pl-2 pb-0">
+                    <span
+                        class="bg-opacity-65 text-sm lg:text-lg font-normal lg:font-medium text-white bg-gray-300 pl-2 pb-0">
                         Extra Curriculum Activities
                     </span>
                 </div>
@@ -276,7 +278,8 @@
                         alt="">
                 </div>
                 <div class="absolute inset-0 flex flex-col justify-end transition duration-300">
-                    <span class="bg-opacity-65 text-lg font-medium text-white bg-gray-300 pl-2 pb-0">
+                    <span
+                        class="bg-opacity-65 text-sm lg:text-lg font-normal lg:font-medium text-white bg-gray-300 pl-2 pb-0">
                         Social & Motivational Activities
                     </span>
                 </div>
@@ -288,7 +291,8 @@
                         alt="">
                 </div>
                 <div class="absolute inset-0 flex flex-col justify-end transition duration-300">
-                    <span class="bg-opacity-65 text-lg font-medium text-white bg-gray-300 pl-2 pb-0">
+                    <span
+                        class="bg-opacity-65 text-sm lg:text-lg font-normal lg:font-medium text-white bg-gray-300 pl-2 pb-0">
                         Group Work
                     </span>
                 </div>
