Added: why choose us section added

--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
         <div class="p-8 ml-0 xl:ml-10 max-w-lg min-h-40 bg-white border-0 rounded-xl flex flex-col items-center opacity-85 hover:opacity-90 transition-all duration-200"
             href="#">
             <div class="">
-                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Knowladge is the
+                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Knowledge is the
                     <br class="hidden lg:inline-block">
                     <span class="text-green-600">
                         Power.
@@ -211,7 +211,7 @@
                         class="inline-flex text bg-gray-100 font-medium text-sm py-1 px-3 rounded-full mb-4">
                         Explore
                     </a>
-                    <h1 class="font-bold text-3xl text-gray-900 xl:text-heading-4 text-dark mb-4">
+                    <h1 class="font-bold text-3xl text-gray-900 text-dark mb-4">
                         <a href="blog.html">
                             Beyond the Classroom: Exploring Nature Life and Culture
                         </a>
@@ -300,11 +300,62 @@
         </div>
     </div>
 
+    <!-- why choose section-->
+
+    <section class="mt-10 lg:mx-44">
+        <div class="flex flex-col-reverse lg:flex-row items-center gap-5 p-3 border rounded-md">
+            <div class="flex flex-col lg:w-1/2 p-3 lg:p-6 gap-3">
+                <span class="text-green-600 text-lg font-medium underline">why choose us?</span>
+                <h1 class="font-bold text-4xl text-gray-900 text-dark">Why you Should Start Learing
+                    with Us ?</h1>
+                <p class="text-sm">if you're looking for quality, if you're looking for a place where your child is well
+                    taken care of
+                    and you can be assured that they get the best of what you paid for, then KWS is the best place.
+                </p>
+                <div class="flex flex-col gap-3">
+                    <div class="flex flex-row items-center gap-5">
+                        <div class="p-6 bg-gray-100 w-[90px] flex items-center justify-center">
+                            <i class="text-2xl  fa-solid fa-graduation-cap"></i>
+                        </div>
+                        <div class="flex flex-col grow">
+                            <h2 class="text-lg font-semibold underline">Skilled Instructors</h2>
+                            <p>Lorem amet ipsum dolor sit amet, consectetur amet adipisicing amet elit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex flex-row items-center gap-5">
+                        <div class="p-6 bg-gray-100 w-[90px] flex items-center justify-center">
+                            <i class="text-2xl fa-solid fa-seedling"></i>
+                        </div>
+                        <div class="flex flex-col grow">
+                            <h2 class="text-lg font-semibold underline">Good Environment</h2>
+                            <p>Lorem amet ipsum dolor sit amet, consectetur amet adipisicing amet elit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex flex-row items-center gap-5">
+                        <div class="p-6 bg-gray-100 w-[90px] flex tems-center justify-center">
+                            <i class="text-2xl fa-solid fa-laptop"></i>
+                        </div>
+                        <div class="flex flex-col grow">
+                            <h2 class="text-lg font-semibold underline">Technology Oriented</h2>
+                            <p>Lorem amet ipsum dolor sit amet, consectetur amet adipisicing amet elit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <img class="h-[400px] w-[400px] lg:h-[500px] lg:w-[600px]" src="./assets/memories-bg.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
 
     <!-- view section -->
     <div class="my-8  flex flex-col">
         <div class="flex flex-col items-center">
-            <h1 class="text-3xl font-semibold">Our Expert Trainer</h1>
+            <h1 class="text-3xl font-semibold">Testimonials</h1>
             <span class="text-sm font-medium italic text-slate-500">Teacher Saying about Hilltop Academy</span>
         </div>
         <div class="mt-2 flex flex-col lg:flex-row items-center justify-center">
