--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 
         <div class="flex flex-1 justify-center pt-5 lg:pt-0">
             <div class="mx-5 lg:w-3/4">
-                <span class="text-lg font-semibold text-gray-700">Fill the form for inquary about Hilltop
+                <span class="text-lg font-semibold text-gray-700">Fill the form for inquiry about Hilltop
                     Academy.</span>
                 <form class="mt-3 lg:mt-8 space-y-6" action="#" method="POST">
                     <div class="flex space-x-4">
