--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
         <div class="w-3/4 text-justify ">
             <h4 class="font-Title font-semibold text-logo_blue">May 17, 2024</h4> 
             <h2 class="font-Title font-semibold">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
-            <div class="group overflow-hidden my-3-3">
+            <div class="group overflow-hidden my-3">
                 <img class="rounded max-h-fit  transform group-hover:scale-105 transition duration-300" src="assets/bg-3.jpg" alt="">
             </div>
 
