Added : social section added

--- a/home.html
+++ b/home.html
@@ -351,6 +351,45 @@
         </div>
     </section>
 
+    <section class="mt-10 lg:mx-44">
+        <div class="flex flex-col-reverse lg:flex-row items-center gap-5 p-3 border rounded-md bg-blue_light">
+            <div class="flex flex-col lg:w-1/2 p-3 lg:p-6 gap-3">
+                <img src="./assets/social.png" alt="">
+            </div>
+            <div class="flex flex-col gap-4 lg:w-2/6">
+                <span class="text-green-600 text-lg font-medium underline">Follow us on social Media.</span>
+                <div
+                    class="flex flex-row items-center gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 transform duration-300">
+                    <i class="fa-brands fa-tiktok"></i>
+                    <a href="">
+                        <h2>@hilltopacademy | TikTok</h2>
+                    </a>
+                </div>
+                <div
+                    class="flex flex-row items-center gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 transform duration-300">
+                    <i class="fa-brands fa-facebook"></i>
+                    <a href="">
+                        <h2>@hilltopacademy2077 | Facebook</h2>
+                    </a>
+                </div>
+                <div
+                    class="flex flex-row items-center gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 transform duration-300">
+                    <i class="fa-brands fa-instagram"></i>
+                    <a href="">
+                        <h2>@hilltopacademy2077 | Instagram</h2>
+                    </a>
+                </div>
+                <div
+                    class="flex flex-row items-center gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 transform duration-300">
+                    <i class="fa-brands fa-youtube"></i>
+                    <a href="">
+                        <h2>@hilltopacademy8138 | Youtube</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- view section -->
     <div class="my-8  flex flex-col">
