--- a/home.html
+++ b/home.html
@@ -352,40 +352,49 @@
     </section>
 
     <section class="mt-10 lg:mx-44">
-        <div class="flex flex-col-reverse lg:flex-row items-center gap-5 p-3 border rounded-md bg-blue_light">
+        <div class="flex flex-col lg:flex-row items-center gap-5 p-3 border rounded-md relative">
             <div class="flex flex-col lg:w-1/2 p-3 lg:p-6 gap-3">
-                <img src="./assets/social.png" alt="">
+                <img class="border" src="./assets/social.png" alt="">
             </div>
-            <div class="flex flex-col gap-4 lg:w-2/6">
-                <span class="text-green-600 text-lg font-medium underline">Follow us on social Media.</span>
+            <div class="flex flex-col items-center gap-4 lg:w-2/5">
+                <span class="italic underline">We are social,</span>
+                <span class="text-green-600 text-3xl font-medium underline">Follow us on social Media.</span>
+                <p class="text-center text-sm">"Stay informed about all the latest happenings, news, and events at our
+                    school by
+                    connecting with us
+                    on social media. Follow our pages to never miss an update and be part of our online community."
+                </p>
+                <span>.</span>
                 <div
-                    class="flex flex-row items-center gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 transform duration-300">
+                    class="flex flex-row items-center w-full justify-center text-base lg:text-xl font-normal gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 hover:underline transform duration-300">
                     <i class="fa-brands fa-tiktok"></i>
                     <a href="">
                         <h2>@hilltopacademy | TikTok</h2>
                     </a>
                 </div>
                 <div
-                    class="flex flex-row items-center gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 transform duration-300">
+                    class="flex flex-row items-center w-full justify-center text-base lg:text-xl font-normal gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 hover:underline transform duration-300">
                     <i class="fa-brands fa-facebook"></i>
                     <a href="">
                         <h2>@hilltopacademy2077 | Facebook</h2>
                     </a>
                 </div>
                 <div
-                    class="flex flex-row items-center gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 transform duration-300">
+                    class="flex flex-row items-center w-full justify-center text-base lg:text-xl font-normal gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 hover:underline transform duration-300">
                     <i class="fa-brands fa-instagram"></i>
                     <a href="">
                         <h2>@hilltopacademy2077 | Instagram</h2>
                     </a>
                 </div>
                 <div
-                    class="flex flex-row items-center gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 transform duration-300">
+                    class="flex flex-row items-center w-full justify-center text-base lg:text-xl font-normal gap-5 bg-white py-2 px-8 border rounded-xl hover:scale-105 hover:opacity-85 hover:underline transform duration-300">
                     <i class="fa-brands fa-youtube"></i>
                     <a href="">
                         <h2>@hilltopacademy8138 | Youtube</h2>
                     </a>
                 </div>
+                <span>Email:- hilltop-academy@outlook.com</span>
+                <span>Phone:- +9779814637756</span>
             </div>
         </div>
     </section>
